Details
Description
With resource initialization fix included: https://codereview.qt-project.org/#/c/210622/
Building simple-qml example fails on linking with the following unresolved symbol:
[elxr] (error #412) unresolved symbols: 1
Qt3DExtras::qInitResources_extras() from libQt53DExtras.a(qforwardrenderer.o)
I think this happens because Q_INIT_RESOURCE is used in qforwardrenderer.cpp inside Qt3DExtras namespace, I don't know where the proper place to put Q_INIT_RESOURCE would be though. Same thing also in qt3dwindow.cpp