Fix resource init namespace issues

Follow the pattern from other modules and put Q_INIT_RESOURCES in a static function
outside all namespaces. INTEGRITY reportedly has linking issues without this.

Task-number: QTBUG-64468
Change-Id: Iccdd03f5384765251a94502766a445a6c6d732b0
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>
Reviewed-by: Janne Koskinen <janne.p.koskinen@qt.io>
Reviewed-by: Kimmo Ollila <kimmo.ollila@qt.io>
Reviewed-by: Antti Määttä <antti.maatta@qt.io>