src/extras/defaults/qt3dwindow.cpp
@@ -62,6 +62,13 @@
 #include <Qt3DRender/qcamera.h>
 #include <QtGui/qopenglcontext.h>
 
+static void initResources()
+{
+#ifdef QT_STATIC
+    Q_INIT_RESOURCE(extras);
+#endif
+}
+
 QT_BEGIN_NAMESPACE
 
 namespace Qt3DExtras {
@@ -86,9 +93,7 @@ Qt3DWindow::Qt3DWindow(QScreen *screen)
 {
     Q_D(Qt3DWindow);
 
-#ifdef QT_STATIC
-    Q_INIT_RESOURCE(extras);
-#endif
+    initResources();
 
     if (!d->parentWindow)
         d->connectToScreen(screen ? screen : d->topLevelScreen.data());
